# Linux-Auto-Updater

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  config.yaml  lau.sh  main.py  note_for_me.md  pyproject.toml  response_to_me.md
docs/: index.html
scripts/: config.sh  configure.sh  git.sh  install.sh  log.sh  run.sh  systemd.sh  update.sh
scripts/dev/: delete-service.sh
scripts/test/: test.sh
