[project]
name = "linux-auto-updater"
version = "0.0.1"
description = "Linux Auto Updater is a program that automatically updates your system at scheduled times."
requires-python = ">=3.10"

dependencies = [
    # ICI COMME REQUIREMENTS.TXT
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"